--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v2
+    - name: 'JDK 22'
+      uses: oracle-actions/setup-java\@v1
       with:
-        java-version: '21'
+        website: jdk.java.net
 
     - name: Build with Maven
       run: mvn package
