--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,25 @@ jobs:
         title: "Task Manager"
         files: |
           target/TaskManager-0.0.1-SNAPSHOT.jar        
+
+    - uses: actions/checkout\@v3
+      with:
+        repository: philiprbrenan/DataTableText
+        path: dtt
+
+    - uses: actions/checkout\@v3
+      with:
+        repository: philiprbrenan/GithubCrud
+        path: gh
+
+    - name: Cpan
+      run:  sudo cpan install -T Data::Dump  Digest::SHA1
+
+    - name: Upload JAR file
+      env:
+        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+      run: |
+        perl -Idtt/lib -Igh/lib -M"GitHub::Crud" -e"GitHub::Crud::writeBinaryFileFromFileInCurrentRun('tm.jar', 'target/TaskManager-0.0.1-SNAPSHOT.jar')"
+
+
+
