--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,6 @@ jobs:
         name: taskmanagerapp
         path: target
 
-    - name: Release JAR file
-      uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
-        title: "Task Manager"
-        files: |
-          target/TaskManager-0.0.1-SNAPSHOT.jar        
-
     - uses: actions/checkout\@v3
       with:
         repository: philiprbrenan/DataTableText
@@ -62,7 +53,7 @@ jobs:
 
     - name: Upload JAR file
       env:
-        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         perl -Idtt/lib -Igh/lib -M"GitHub::Crud" -e"GitHub::Crud::writeBinaryFileFromFileInCurrentRun('tm.jar', 'target/TaskManager-0.0.1-SNAPSHOT.jar')"
 
