--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,8 @@ jobs:
     - run: |
         git config user.name "aaa"
         git config user.email "aaa\@aaa.com"
-        cp target/TaskManager-0.0.1-SNAPSHOT.jar tm.jar
+        ls -la "target/TaskManager-0.0.1-SNAPSHOT.jar"
+        cp "target/TaskManager-0.0.1-SNAPSHOT.jar" tm.jar
         git add tm.jar
         git commit -m "Upload zip"
         git push
